--- a/src/app.yaml
+++ b/src/app.yaml
@@ -3,6 +3,11 @@ version: 1
 runtime: go
 api_version: go1
 
+nobuild_files:
+    - vendor
+skip_files:
+    - vendor/.*$
+
 handlers:
 - url: /.*
   script: _go_app
